fix: add gap between home cards and xbox section

--- a/html-css/microsoft-homepage/style.css
+++ b/html-css/microsoft-homepage/style.css
@@ -106,6 +106,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    margin-bottom: 40px;
 }
 
 .home-cards img {
@@ -128,3 +129,6 @@ ul {
 .home-cards a:hover {
     margin-left: 10px;
 }
+
+
+
